--- a/styles.css
+++ b/styles.css
@@ -140,3 +140,14 @@ h2 {
 .form-control {
     background-color: #F1EDEF;
 }
+
+.theweeknd{
+    background-size: cover;
+    background-position: right;
+    border-radius: 80px;
+    width: 100%;
+    height: 606px;
+    padding: 40px;
+    margin: 0 auto;
+}
+}
