--- a/styles.css
+++ b/styles.css
@@ -151,3 +151,15 @@ h2 {
     margin: 0 auto;
 }
 }
+
+
+
+.theweeknd2{background-size: cover;
+    background-position: right;
+    border-radius: 80px;
+    width: 100%;
+    height: 606px;
+    padding: 40px;
+    margin: 0 auto;
+}
+ } 
