--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     --laranja-claro: #0f5883;
     --alto-contraste-fundo: #000000;
     --alto-contraste-texto: #ffffff;
-    --alto-contraste-link: #ffd700;
+    --alto-contraste-link: #b7ddf8;
 }
 
 body {
